# kart-stocks

./: .gitignore  Cargo.toml  README.md  settings.toml.example
data/ocr_models/: README.md
src/: capture.rs  data.rs  extract.rs  lib.rs  llm.rs  main.rs  obs.rs  ocr.rs  phash.rs  portfolio.rs  run.rs  settings.rs  twitch.rs  twitch_auth.rs  window.rs
